--- a/arch/arm/boot/dts/picocoremx6sx.dts
+++ b/arch/arm/boot/dts/picocoremx6sx.dts
@@ -50,6 +50,9 @@ lcd_wvga {				\
 /* GPU is only available on CPU variants MCIMX6X3... and MCIMX6X4... */
 #define CONFIG_PICOCOREMX6SX_GPU
 
+/* Keep VLCD on when pca and touch are powered through VLCD */
+//#define CONFIG_KEEP_VLCD_ON
+
 /*
  * Configure touch screen:
  *
@@ -241,6 +244,7 @@ lcd_wvga {				\
 #endif
 
 #if (CONFIG_PICOCOREMX6SX_LCDIF0 == DISPLAY_LCD)
+#ifndef CONFIG_KEEP_VLCD_ON
 		reg_disp_3v3: disp-3v3 {
 			compatible = "regulator-fixed";
 			regulator-name = "disp-3v3";
@@ -249,6 +253,7 @@ lcd_wvga {				\
 			regulator-max-microvolt = <3300000>;
 			enable-active-high;
 		};
+#endif
 #endif
 
 #if defined(CONFIG_PICOCOREMX6SX_I2C_B) && (CONFIG_PICOCOREMX6SX_LCDIF0 == DISPLAY_LCD)
@@ -725,7 +730,9 @@ lcd_wvga {				\
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_lcdif1>;		/* Remove when already active */
 	display = <&display0>;			/* Remove when already active */
+#ifndef CONFIG_KEEP_VLCD_ON
 	lcd-supply = <&reg_disp_3v3>;
+#endif
 	// pattern = <5>;
 	status = "okay";
 
@@ -960,7 +967,9 @@ lcd_wvga {				\
 				MX6SX_PAD_GPIO1_IO08__GPIO1_IO_8	0x0b0b0
 
 				/* VLCD_ON - active high */
+#ifndef CONFIG_KEEP_VLCD_ON
 				MX6SX_PAD_LCD1_RESET__GPIO3_IO_27	0x130b0
+#else
 				/* ### HW-Bug:
 				 * There is a hardware bug on the Starterkit
 				 * baseboard PicoCoreBBRGB Rev 1.20. Instead of
@@ -970,16 +979,19 @@ lcd_wvga {				\
 				 * on VLCD_ON itself. Because VLCD_ON is low on
 				 * startup, the PCA9632 chip is not powered and
 				 * can not be initialized, causing the display
-				 * to fail.
-				 * By disabling the line above and enabling the
-				 * line below, you can use a workaround that
-				 * keeps VLCD_ON high at startup. Then the
-				 * display will work (with some restrictions).
+				 * to fail. The same happens for the touch
+				 * controller at startup of Yocto, because the
+				 * LCD is powered down during changes in buffer.
+				 * By defining CONFIG_KEEP_VLCD_ON, you can use
+				 * a workaround that keeps VLCD_ON high all the
+				 * time. Then the display will work (with some
+				 * restrictions).
 				 * Please note that this is not a bug on the
 				 * PicoCoreMX6SX module itself, only on the
 				 * Starterkit baseboard.
 				 */
-				//MX6SX_PAD_LCD1_RESET__GPIO3_IO_27	0x1b0b0
+				MX6SX_PAD_LCD1_RESET__GPIO3_IO_27	0x1b0b0
+#endif
 
 				/* PHY_RST */
 				MX6SX_PAD_ENET1_MDC__GPIO2_IO_2		0x0b0b0
