--- a/arch/arm64/boot/dts/F+S/picocoremx8mx.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mx.dts
@@ -123,7 +123,7 @@
 #undef CONFIG_PICOCOREMX8MX_SPI_A_CAN_CONVERTER
 #endif
 
-#include "../freescale/fsl-imx8mm.dtsi"
+#include "../freescale/imx8mm.dtsi"
 #include <dt-bindings/pwm/pwm.h>
 #include <dt-bindings/rtc/nxp,pcf85263.h>
 
@@ -1260,13 +1260,13 @@
 #ifdef CONFIG_PICOCOREMX8MX_UART_A
 		pinctrl_uart1: uart1grp {
 			fsl,pins = <
-				MX8MM_IOMUXC_SAI2_RXC_UART1_RX			0x00140
-				MX8MM_IOMUXC_SAI2_RXFS_UART1_TX			0x00140
+				MX8MM_IOMUXC_SAI2_RXC_UART1_DCE_RX		0x00140
+				MX8MM_IOMUXC_SAI2_RXFS_UART1_DCE_TX		0x00140
 #ifdef CONFIG_PICOCOREMX8MX_UART_A_RTSCTS
 				/* CTS */
-				MX8MM_IOMUXC_SAI2_RXD0_UART1_CTS_B		0x00140
+				MX8MM_IOMUXC_SAI2_RXD0_UART1_DCE_RTS_B	0x00140
 				/* RTS */
-				MX8MM_IOMUXC_SAI2_TXFS_UART1_RTS_B		0x00140
+				MX8MM_IOMUXC_SAI2_TXFS_UART1_DCE_CTS_B	0x00140
 #endif
 			>;
 		};
@@ -1276,13 +1276,13 @@
         /* debug output */
 		pinctrl_uart2: uart2grp {
 			fsl,pins = <
-				MX8MM_IOMUXC_SAI3_TXFS_UART2_RX			0x00140
-				MX8MM_IOMUXC_SAI3_TXC_UART2_TX			0x00140
+				MX8MM_IOMUXC_SAI3_TXFS_UART2_DCE_RX		0x00140
+				MX8MM_IOMUXC_SAI3_TXC_UART2_DCE_TX		0x00140
 #ifdef CONFIG_PICOCOREMX8MX_UART_B_RTSCTS
 				/* UART_B_CTS */
-				MX8MM_IOMUXC_SAI3_RXC_UART2_CTS_B		0x00140
+				MX8MM_IOMUXC_SAI3_RXC_UART2_DCE_CTS_B	0x00140
 				/* UART_B_RTS */
-				MX8MM_IOMUXC_SAI3_RXD_UART2_RTS_B		0x00140
+				MX8MM_IOMUXC_SAI3_RXD_UART2_DCE_RTS_B	0x00140
 #endif
 			>;
 		};
