--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -11,7 +11,7 @@ subdir-y += bitmain
 subdir-y += broadcom
 subdir-y += cavium
 subdir-y += exynos
-dts-dirs += F+S
+subdir-y += F+S
 subdir-y += freescale
 subdir-y += hisilicon
 subdir-y += intel
