--- a/arch/arm64/boot/dts/F+S/armstonemx8m.dtsi
+++ b/arch/arm64/boot/dts/F+S/armstonemx8m.dtsi
@@ -294,7 +294,7 @@
 	};
 
 	#ifdef CONFIG_ARMSTONEMX8M_SGTL5000_AUDIO
-	sgtl5000: sgtl5000@0a {
+	sgtl5000: sgtl5000@a {
 		compatible = "fsl,sgtl5000";
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_audio_mclk>;
@@ -529,10 +529,6 @@
 	status = "okay";
 };
 
-&usb3_0 {
-	status = "okay";
-};
-
 &usb_dwc3_0 {
 	status = "okay";
 	extcon = <&typec_ptn5100>;
@@ -543,10 +539,6 @@
 };
 
 &usb3_phy1 {
-	status = "okay";
-};
-
-&usb3_1 {
 	status = "okay";
 };
 
@@ -665,12 +657,12 @@
 	#size-cells = <0>;
 	status = "okay";
 	port {
-		mipi1_sensor_ep: endpoint1 {
+		mipi1_sensor_ep: endpoint@0 {
 			remote-endpoint = <&ov5640_mipi1_ep>;
 			data-lanes = <1 2>;
 		};
 
-		csi1_mipi_ep: endpoint2 {
+		csi1_mipi_ep: endpoint@1 {
 			remote-endpoint = <&csi1_ep>;
 		};
 	};
