--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -15,7 +15,8 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mm.dtb \
 								picocoremx8mm-lcdif-tc358764-j070wvtc0211.dtb \
 								picocoremx8mm-lcdif-g050tan01.dtb \
 								picocoremx8mm-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
-								picocoremx8mm-lcdif-rf3500d-ayw-mng1.dtb
+								picocoremx8mm-lcdif-rf3500d-ayw-mng1.dtb \
+								tbs2.dtb
 
 dtb-$(CONFIG_ARCH_MXC) += efusmx8x.dtb
 
