--- a/arch/arm64/boot/dts/F+S/picocoremx8mx.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mx.dts
@@ -13,7 +13,7 @@
  */
 
 /*
- * Copyright (C) 2019 F&S Elektronik Systeme GmbH
+ * Copyright (C) 2020 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -33,11 +33,11 @@
 #define CONFIG_PICOCOREMX8MX_NAND
 
 /* On-board eMMC */
-//#define CONFIG_PICOCOREMX8MX_EMMC
+#define CONFIG_PICOCOREMX8MX_EMMC
 
 /* Network */
 //###: TODO Check how it works with Switch
-//#define CONFIG_PICOCOREMX8MX_ETH
+#define CONFIG_PICOCOREMX8MX_ETH
 
 /* USB */
 #define CONFIG_PICOCOREMX8MX_USB_OTG1
@@ -96,7 +96,7 @@
 //#define CONFIG_PICOCOREMX8MX_PARALLEL_CAMERA
 
 /* Camera on serial MIPI CSI interface */
-#define CONFIG_PICOCOREMX8MX_SERIAL_CAMERA
+//#define CONFIG_PICOCOREMX8MX_SERIAL_CAMERA
 
 /*
  * SD_A - External SD port with Card Detect (CD) and Write Protect (WP)
@@ -113,11 +113,6 @@
 #define CONFIG_PICOCOREMX8MX_SD_B
 #define CONFIG_PICOCOREMX8MX_SD_B_CD
 #define CONFIG_PICOCOREMX8MX_SD_B_WP
-
-/* If NAND is equipped, eMMC is not available */
-#ifdef CONFIG_PICOCOREMX8MX_NAND
-#undef CONFIG_PICOCOREMX8MX_EMMC
-#endif
 
 #ifdef CONFIG_PICOCOREMX8MX_MIPI_DSI_LVDS
 #undef CONFIG_PICOCOREMX8MX_SPI_A_CAN_CONVERTER
@@ -141,7 +136,16 @@
 		bootargs = "console=ttymxc0,115200 earlycon=ec_imx6q,0x30860000,115200";
 		stdout-path = &uart1;
 	};
-
+	reserved-memory {
+		/* global autoconfigured region for contiguous allocations */
+		linux,cma {
+			compatible = "shared-dma-pool";
+			reusable;
+			size = <0 0x14000000>;
+			alloc-ranges = <0 0x40000000 0 0x40000000>;
+			linux,cma-default;
+		};
+	};
 #ifdef CONFIG_PICOCOREMX8MX_BL_CTRL
 	backlight_ldb {
 		compatible = "pwm-backlight";
@@ -319,12 +323,12 @@
 
 
 #ifdef CONFIG_PICOCOREMX8MX_SGTL5000_AUDIO
-	sgtl5000: sgtl5000@0a {
+	sgtl5000: sgtl5000@a {
 		compatible = "fsl,sgtl5000";
 		/* MCLK is needed for i2c sgtl driver */
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_sgtl5000>;
-		reg = <0x0a>;
+		reg = <0xa>;
 		mono2both;
 		clocks = <&clk IMX8MM_CLK_SAI5_ROOT>;
 		VDDA-supply = <&reg_sgtl5000_vdda>;
@@ -337,9 +341,9 @@
 	pmic: bd71837@4b {
 		reg = <0x4b>;
 		compatible = "rohm,bd71840", "rohm,bd71837";
-		/* PMIC BD71837 PMIC_nINT GPIO3_IO24 */
-		pinctrl-0 = <&pinctrl_pmic>;
-		gpio_intr = <&gpio1 10 GPIO_ACTIVE_LOW>;
+		interrupt-parent = <&gpio1>;
+		interrupts = <10 GPIO_ACTIVE_LOW>;
+		rohm,reset-snvs-powered;
 
 		gpo {
 			rohm,drv = <0x0C>;	/* 0b0000_1100 all gpos with cmos output mode */
@@ -398,7 +402,7 @@
 			buck6_reg: regulator@5 {
 				reg = <5>;
 				regulator-compatible = "buck6";
-				regulator-min-microvolt = <2600000>;
+				regulator-min-microvolt = <3000000>;
 				regulator-max-microvolt = <3300000>;
 				regulator-boot-on;
 				regulator-always-on;
@@ -598,6 +602,7 @@
 &pwm2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm2>;
+	#pwm-cells = <3>;
 	status = "okay";
 };
 #endif
@@ -639,19 +644,51 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_fec1>;
 	phy-mode = "rgmii-id";
-	phy-handle = <&ethphy0>;
+	//phy-handle = <&ethphy0>;
+	phy-reset-gpios = <&gpio1 5 GPIO_ACTIVE_LOW>;
+	phy-reset-duration = <11>;
+	phy-reset-post-delay=<1>;
 	fsl,magic-packet;
 	status = "okay";
+
+	fixed-link {
+		speed = <1000>;
+		full-duplex;
+	};
 
 	mdio {
 		#address-cells = <1>;
 		#size-cells = <0>;
 
-		ethphy0: ethernet-phy@1 {
-			compatible = "ethernet-phy-ieee802.3-c22";
-			reg = <1>;
+		switch0: switch@0{
+			compatible = "microchip,ksz9477";
+			reg = <0>;
+			ports {
+				#address-cells = <1>;
+				#size-cells = <0>;
+				port@0 {
+					reg = <0>;
+					label = "lan1";
+				};
+
+				port@1 {
+					reg = <1>;
+					label = "lan2";
+				};
+
+				port@3 {
+					reg = <2>;
+					label = "cpu";
+             			        ethernet = <&fec1>;
+					fixed-link {
+					speed = <1000>;
+					full-duplex;
+					};
+				};
+			};
 		};
 	};
+
 };
 
 #endif
@@ -755,7 +792,7 @@
 #endif
 
 #ifdef CONFIG_PICOCOREMX8MX_UART_A
-&uart1 {
+&uart1 { /* console */
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart1>;
 	assigned-clocks = <&clk IMX8MM_CLK_UART1>;
@@ -768,7 +805,7 @@
 #endif
 
 #ifdef CONFIG_PICOCOREMX8MX_UART_B
-&uart2 { /* console */
+&uart2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart2>;
 	assigned-clocks = <&clk IMX8MM_CLK_UART2>;
@@ -882,8 +919,6 @@
 	pinctrl-1 = <&pinctrl_usdhc3_100mhz>;
 	pinctrl-2 = <&pinctrl_usdhc3_200mhz>;
 	bus-width = <8>;
-	voltage-ranges = <3300 3300>;
-	no-1-8-v;
 	non-removable;
 	status = "okay";
 };
@@ -895,7 +930,7 @@
 	#size-cells = <0>;
 	status = "okay";
 	port {
-		mipi1_sensor_ep: endpoint1 {
+		mipi1_sensor_ep: endpoint@1 {
 			remote-endpoint = <&ov5640_mipi1_ep>;
 			data-lanes = <2>;
 			csis-hs-settle = <13>;
@@ -909,7 +944,7 @@
 		};
 #endif
 
-		csi1_mipi_ep: endpoint2 {
+		csi1_mipi_ep: endpoint@2 {
 			remote-endpoint = <&csi1_ep>;
 		};
 	};
@@ -1049,10 +1084,14 @@
 #ifdef CONFIG_PICOCOREMX8MX_MIPI_DSI_LVDS
 		pinctrl_mipi_dsi_en: mipi_dsi_en {
 			fsl,pins = <
+				/* LVDS STBY / TC358764 STBY */
+				MX8MM_IOMUXC_GPIO1_IO04_GPIO1_IO4			0x00016
 				/* LVDS RESET / TC358764 RST */
 				MX8MM_IOMUXC_GPIO1_IO08_GPIO1_IO8			0x00016
-				/* CLKO2 -> EXTCLK */
-				MX8MM_IOMUXC_GPIO1_IO15_CCMSRCGPCMIX_CLKO2	0x00059
+				/* Use MIP-DSI CLK as source by defualt.
+				   For EXTCLK use the following setting in your display DTS */
+				/* MX8MM_IOMUXC_GPIO1_IO15_CCMSRCGPCMIX_CLKO2	0x00059 */
+				MX8MM_IOMUXC_GPIO1_IO15_GPIO1_IO15	0x00016
 			>;
 		};
 #endif
@@ -1061,7 +1100,7 @@
 		pinctrl_fec1: fec1grp {
 			fsl,pins = <
 				MX8MM_IOMUXC_ENET_MDC_ENET1_MDC			0x00003
-				MX8MM_IOMUXC_ENET_MDIO_ENET1_MDIO		0x00003
+				MX8MM_IOMUXC_ENET_MDIO_ENET1_MDIO		0x00023
 				MX8MM_IOMUXC_ENET_TD3_ENET1_RGMII_TD3		0x0001f
 				MX8MM_IOMUXC_ENET_TD2_ENET1_RGMII_TD2		0x0001f
 				MX8MM_IOMUXC_ENET_TD1_ENET1_RGMII_TD1		0x0001f
@@ -1077,7 +1116,7 @@
 				/* reset */
 				MX8MM_IOMUXC_GPIO1_IO05_GPIO1_IO5		0x00019
 				/* ETH_SW_INTn */
-				MX8MM_IOMUXC_GPIO1_IO11_GPIO1_IO11		0x00019
+				MX8MM_IOMUXC_GPIO1_IO11_GPIO1_IO11		0x00064
 			>;
 		};
 
@@ -1387,7 +1426,7 @@
 		};
 #endif
 
-#ifdef CONFIG_PICOCOREMX8MX_SD_B
+#if defined(CONFIG_PICOCOREMX8MX_WLAN) || defined(CONFIG_PICOCOREMX8MX_SD_B)
 		pinctrl_usdhc2_gpio: usdhc2grpgpio {
 			fsl,pins = <
 #ifdef CONFIG_PICOCOREMX8MX_SD_B_CD
@@ -1398,7 +1437,7 @@
 				/* WP */
 				MX8MM_IOMUXC_SD2_WP_GPIO2_IO20			0x001c4
 #endif
-				/* RST */
+				/* Reset */
 				MX8MM_IOMUXC_SD2_RESET_B_GPIO2_IO19		0x00041
 			>;
 		};
