--- a/arch/arm64/configs/fsimx8mm_defconfig
+++ b/arch/arm64/configs/fsimx8mm_defconfig
@@ -623,7 +623,7 @@ CONFIG_DRM_PANEL_SEIKO_43WVF1G=y
 CONFIG_DRM_SII902X=m
 CONFIG_DRM_PANEL_NOVATEK_NT35521=y
 CONFIG_DRM_NXP_SEIKO_43WVFIG=y
-CONFIG_DRM_TOSHIBA_TC358764=y
+CONFIG_DRM_TOSHIBA_FUS_TC358775=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_NWL_MIPI_DSI=y
 CONFIG_DRM_CDNS_HDMI_CEC=y
@@ -1069,3 +1069,4 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_FTRACE is not set
 CONFIG_MEMTEST=y
+CONFIG_HID_MULTITOUCH=y
