--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -26,7 +26,10 @@ dtb-$(CONFIG_ARCH_MXC) += efusmx8x.dtb
 dtb-$(CONFIG_ARCH_MXC) += picocoremx8mn.dtb \
 				picocoremx8mn-bbdsi.dtb \
 				picocoremx8mn-lcdif-tc358764-g070y2-l01.dtb \
-                picocoremx8mn-lcdif-tc358764-j070wvtc0211.dtb
+                picocoremx8mn-lcdif-tc358764-j070wvtc0211.dtb \
+				picocoremx8mx-nano.dtb \
+				picocoremx8mx-nano-bbdsi.dtb \
+				picocoremx8mx-nano-lcdif-tc358764-j070wvtc0211.dtb
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
