--- a/arch/arm64/boot/dts/F+S/picocoremx8mx.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mx.dts
@@ -23,7 +23,7 @@
 /dts-v1/;
 
 /* Set board revision as 3-digit number, e.g. 110 for board rev. 1.10 */
-#define CONFIG_PICOCOREMX8MX_BOARD_REVISION	100
+#define CONFIG_PICOCOREMX8MX_BOARD_REVISION	110
 
 /* MIPI DSI */
 #define CONFIG_PICOCOREMX8MX_MIPI_DSI
@@ -338,27 +338,17 @@
 #endif
 
 	/* PMIC */
-	pmic: bd71837@4b {
+	pmic@4b {
 		reg = <0x4b>;
-		compatible = "rohm,bd71840", "rohm,bd71837";
+		compatible = "rohm,bd71847";
+		pinctrl-0 = <&pinctrl_pmic>;
 		interrupt-parent = <&gpio1>;
 		interrupts = <10 GPIO_ACTIVE_LOW>;
 		rohm,reset-snvs-powered;
 
-		gpo {
-			rohm,drv = <0x0C>;	/* 0b0000_1100 all gpos with cmos output mode */
-		};
-
 		regulators {
-			#address-cells = <1>;
-			#size-cells = <0>;
-
-			bd71837,pmic-buck2-uses-i2c-dvs;
-			bd71837,pmic-buck2-dvs-voltage = <1000000>, <900000>, <0>; /* VDD_ARM: Run-Idle */
-
-			buck1_reg: regulator@0 {
-				reg = <0>;
-				regulator-compatible = "buck1";
+			buck1_reg: BUCK1 {
+				regulator-compatible = "BUCK1";
 				regulator-min-microvolt = <700000>;
 				regulator-max-microvolt = <1300000>;
 				regulator-boot-on;
@@ -366,105 +356,87 @@
 				regulator-ramp-delay = <1250>;
 			};
 
-			buck2_reg: regulator@1 {
-				reg = <1>;
-				regulator-compatible = "buck2";
+			buck2_reg: BUCK2 {
+				regulator-compatible = "BUCK2";
 				regulator-min-microvolt = <700000>;
 				regulator-max-microvolt = <1300000>;
 				regulator-boot-on;
 				regulator-always-on;
 				regulator-ramp-delay = <1250>;
-			};
-#if 0
-			buck3_reg: regulator@2 {
-				reg = <2>;
-				regulator-compatible = "buck3";
-				regulator-min-microvolt = <700000>;
-				regulator-max-microvolt = <1300000>;
+				rohm,dvs-run-voltage = <1000000>;
+				rohm,dvs-idle-voltage = <900000>;
 			};
 
-			buck4_reg: regulator@3 {
-				reg = <3>;
-				regulator-compatible = "buck4";
-				regulator-min-microvolt = <700000>;
-				regulator-max-microvolt = <1300000>;
-			};
-#endif
-			buck5_reg: regulator@4 {
-				reg = <4>;
-				regulator-compatible = "buck5";
+			buck3_reg: BUCK3 {
+				// BUCK5 in datasheet
+				regulator-name = "BUCK3";
 				regulator-min-microvolt = <700000>;
 				regulator-max-microvolt = <1350000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			buck6_reg: regulator@5 {
-				reg = <5>;
-				regulator-compatible = "buck6";
+			buck4_reg: BUCK4 {
+				// BUCK6 in datasheet
+				regulator-name = "BUCK4";
 				regulator-min-microvolt = <3000000>;
 				regulator-max-microvolt = <3300000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			buck7_reg: regulator@6 {
-				reg = <6>;
-				regulator-compatible = "buck7";
+			buck5_reg: BUCK5 {
+				// BUCK7 in datasheet
+				regulator-name = "BUCK5";
 				regulator-min-microvolt = <1605000>;
 				regulator-max-microvolt = <1995000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			buck8_reg: regulator@7 {
-				reg = <7>;
-				regulator-compatible = "buck8";
+			buck6_reg: BUCK6 {
+				// BUCK8 in datasheet
+				regulator-name = "BUCK6";
 				regulator-min-microvolt = <800000>;
 				regulator-max-microvolt = <1400000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			ldo1_reg: regulator@8 {
-				reg = <8>;
-				regulator-compatible = "ldo1";
+			ldo1_reg: LDO1 {
+				regulator-compatible = "LDO1";
 				regulator-min-microvolt = <1600000>;
 				regulator-max-microvolt = <1900000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			ldo2_reg: regulator@9 {
-				reg = <9>;
-				regulator-compatible = "ldo2";
+			ldo2_reg: LDO2 {
+				regulator-compatible = "LDO2";
 				regulator-min-microvolt = <800000>;
 				regulator-max-microvolt = <900000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			ldo3_reg: regulator@10 {
-				reg = <10>;
-				regulator-compatible = "ldo3";
+			ldo3_reg: LDO3 {
+				regulator-compatible = "LDO3";
 				regulator-min-microvolt = <1800000>;
 				regulator-max-microvolt = <3300000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			ldo4_reg: regulator@11 {
-				reg = <11>;
-				regulator-compatible = "ldo4";
+			ldo4_reg: LDO4 {
+				regulator-compatible = "LDO4";
 				regulator-min-microvolt = <900000>;
 				regulator-max-microvolt = <1800000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			ldo6_reg: regulator@13 {
-				reg = <13>;
-				regulator-compatible = "ldo6";
+			ldo6_reg: LDO6 {
+				regulator-compatible = "LDO6";
 				regulator-min-microvolt = <900000>;
 				regulator-max-microvolt = <1800000>;
 				regulator-boot-on;
