--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -20,6 +20,7 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mm.dtb \
 								picocoremx8mx-lcdif-adp-mipi2lvds1-G133HAN01.dtb \
 								picocoremx8mm-lcdif-adp-mipi2lvds1-G133HAN01.dtb \
 								picocoremx8mx-tc358775-G133HAN01.dtb \
+								picocoremx8mx-tc358775-j070wvtc0211.dtb \
 
 dtb-$(CONFIG_ARCH_MXC) += efusmx8x.dtb
 
