Add fsimx8mm BD718XX driver and cma no-override flag to picocore8mx dts
- CONFIG_REGULATOR_BD718XX was removed accidentally in a previous commit
so add it again.

-Add possibility to set cma size via device tree for picocoremx8mx
See Uboot git commit 79404d05ed17135d2d2a3d473475b6eccbd64777

--- a/arch/arm64/boot/dts/F+S/picocoremx8mx.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mx.dts
@@ -151,6 +151,11 @@
 			size = <0 0x14000000>;
 			alloc-ranges = <0 0x40000000 0 0x40000000>;
 			linux,cma-default;
+			/*
+			 * The propertiy "size" is overwritten by Uboot, depending
+			 * on the ram size. To prevent this, uncomment the following line
+			 */
+			//no-uboot-override;
 		};
 	};
 #ifdef CONFIG_PICOCOREMX8MX_BL_CTRL
