--- a/arch/arm64/boot/dts/F+S/picocoremx8mx-tc358775-j070wvtc0211.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mx-tc358775-j070wvtc0211.dts
@@ -125,4 +125,12 @@
 	};
 };
 
+/{
+	backlight_ldb {
+		pwms = <&pwm2 0 250000 PWM_POLARITY_INVERTED>;
+		brightness-levels = <135 143 151 159 167 175 183 191
+				     199 207 215 223 231 239 247 255>;
+		default-brightness-level = <14>;
+	};
+};
 
